# BitNet

./: Package.swift
.build/arm64-apple-macosx/debug/BitNet.build/: module.modulemap
.build/arm64-apple-macosx/debug/BitNetPackageTests.build/: module.modulemap
.build/arm64-apple-macosx/debug/BitNetSwift.build/: module.modulemap  output-file-map.json
.build/arm64-apple-macosx/debug/BitNetSwiftPackageTests.build/: module.modulemap
.build/arm64-apple-macosx/debug/BitNetSwiftTests.build/: output-file-map.json
.build/arm64-apple-macosx/debug/BitNetTests.build/: output-file-map.json
.build/arm64-apple-macosx/debug/ModuleCache/3CYS089H38Z2Z/: AvailabilityMacros-QYM3MGPIIL0Z.pcm  CFNetwork-FK00OIITCJCG.pcm  CoreFoundation-3OV06IHFPNXKB.pcm  CoreServices-3797ATKJGI1B9.pcm  DarwinFoundation-1LQBH7Z7TEUNF.pcm  DiskArbitration-1D3D14X4HIF3D.pcm  Dispatch-ULVSNZHQD6FZ.pcm  IOKit-2WC54B0YP244G.pcm  MachO-AQ2CQRJRKXAJ.pcm  ObjectiveC-F47S0F1PPKPW.pcm  Security-19VD52SJTBACT.pcm  SwiftShims-29Q9RFO673RXH.pcm  TargetConditionals-33PE30RHDVCL.pcm  XPC-1QE6YZQA7ETCQ.pcm  _Builtin_float-12DWEDUV3JEH6.pcm  _Builtin_inttypes-12DWEDUV3JEH6.pcm  _Builtin_iso646-12DWEDUV3JEH6.pcm  _Builtin_limits-12DWEDUV3JEH6.pcm  _Builtin_stdarg-12DWEDUV3JEH6.pcm  _Builtin_stdatomic-12DWEDUV3JEH6.pcm  _Builtin_stdbool-12DWEDUV3JEH6.pcm  _Builtin_stddef-12DWEDUV3JEH6.pcm  __wctype-5BOWS7TC3ITK.pcm  (+49 more)
Sources/BitNet/: CMakeLists.txt
Sources/BitNetSwift/: BitNet.swift  GGMLContext.swift  GGMLTensor.swift
Tests/BitNetTests/: BitNetTests.swift
src/: CMakeLists.txt
swift-interop/: module.modulemap
